--- a/Samples/hs256/appsettings.json
+++ b/Samples/hs256/appsettings.json
@@ -7,7 +7,13 @@
       "Microsoft": "Information"
     }
   },
-  "Urls": "http://localhost:5000",
+  "kestrel": {
+    "EndPoints": {
+      "Http": {
+        "Url": "http://*:5000"
+      }
+    }
+  },
   "Auth0": {
     "Domain": "YOUR_AUTH0_DOMAIN",
     "Audience": "YOUR_UNIQUE_IDENTIFIER",
