--- a/Quickstart/00-Starter-Seed/Properties/launchSettings.json
+++ b/Quickstart/00-Starter-Seed/Properties/launchSettings.json
@@ -5,15 +5,16 @@
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/public",
+      "applicationUrl": "http://localhost:3010",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "http://localhost:3010"
+      }
     },
     "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/api/public",
+      "environmentVariables": {},
       "publishAllPorts": true
     }
   }
